# PyonPyon

./: deploy_and_train.sh  pyproject.toml  qwen35_chat_template.jinja  setup_server.sh
qwen3_rl/: config.py  store.py  trace.py  trainer.py  trajectory.py
qwen3_rl/env/: __init__.py  base.py  mock_repl.py  reverse_string.py  reward_text.py  string_match.py  types.py
qwen3_rl/loss/: __init__.py  fused_logp.py  grpo.py
qwen3_rl/rollout/: __init__.py  async_pool.py  base.py  hf_backend.py  vllm_backend.py
qwen3_rl/scripts/: rl_train.py  rollout_debug.py  rollout_viewer.py  sft_train.py
qwen3_rl/sft/: __init__.py  jsonl.py
qwen3_rl/template/: __init__.py  qwen3_5.py  spec.py
tests/: test_fused_logp.py  test_grpo_loss.py  test_mock_repl.py  test_multi_turn_rollout.py  test_peft_roundtrip.py  test_reverse_string.py  test_reward_text.py  test_rollout_viewer.py  test_sft_jsonl.py  test_template.py  test_trace.py  test_trainer_eval.py  test_trajectory.py  test_vllm_backend_env.py
